--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-	<title>Pigeon and Numbers</title>
+	<title>Голуби и числа</title>
 	<meta http-equiv="Content-type" content="text/html; charset=UTF-8" />
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<link href="css/birds.css" rel="stylesheet" />
@@ -69,8 +69,7 @@
 </div>
 <div class="container">
 	<div>
-		<div class="icono-volumeHigh" id='sound'></div>
-		<div class="icono-pause" id='pause'></div>
+		<div class="icono-volumeHigh" id="sound"></div>
 	</div>
 	<div class="score" id="score">
 		<h> 0 </h>
