--- a/pigeon/index.html
+++ b/pigeon/index.html
@@ -34,12 +34,13 @@
 	<p><a href="#" id="go">Ссылка с окном</a></p>
 	<div class="congrats">
 		<div class="text">
+			<div ALIGN="CENTER"><h1>Голуби и числа: стремясь в бесконечность</h1></div>
 			<div class="del">
 				<h5>
 					<div ALIGN="CENTER"><h2>Привет, дружок!</h2></br>
-						<BLOCKQUOTE>
-							Ты любишь голубей так же как и мы? А числа? Если ответ на оба вопроса 'да', значит ты сюда попал не случайно! Тебе предстоит совершить интереснейшее путешествие с числами от 1 до 9, а также окунутся в мир отрицательных, а иногда даже и цветных чисел! Помоги голубю пройти к бесконечности! Это не так просто как кажется, тебе придется лететь день и ночь напролет, встретиться с ворами твоих драгоценных чисел, возможно придется терпеть потери, но мы верим в тебя! 
-						</BLOCKQUOTE>
+
+						Ты любишь голубей так же как и мы? А числа? Если ответ на оба вопроса 'да', значит ты сюда попал не случайно! Тебе предстоит совершить интереснейшее путешествие с числами от 1 до 9, а также окунутся в мир отрицательных, а иногда даже и цветных чисел! Помоги голубю пройти к бесконечности! Это не так просто как кажется, тебе придется лететь день и ночь напролет, встретиться с ворами твоих драгоценных чисел, возможно придется терпеть потери, но мы верим в тебя! 
+
 					</div>
 				</h5>
 			</div>
@@ -55,16 +56,15 @@
 								<li>и самая страшная, <span class="red">красная</span>, обнуляет все твои очки!</li>
 							</ul>
 						</div>
-					</br> Удачи!
-				</BLOCKQUOTE>
-			</div>
+					</BLOCKQUOTE>
+				</div>
+			</h5>
 		</h5>
-	</br>
-</h5>
-</div>
-<div class="buttom" ALIGN="CENTER">
-	<input type="image" src="img/buttom_01.png" VALUE="Полетели!" id="buttom">
-</div>
+		<div class="buttom" ALIGN="CENTER">
+			<input type="image" src="img/buttom_01.png" VALUE="Полетели!" id="buttom">
+		</div>
+	</div>
+
 </div>
 </div>
 <div class="container">
